<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8dfea"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="412dp"
        android:layout_height="137dp"
        android:layout_marginBottom="40dp"
        android:background="#3B5998"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/textview_correo"
        android:textColor="#ECDFDF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="117dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:height="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_correoI"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/textview_contraseñaI"
        android:textColor="#F3EFEF"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="100dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:height="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_contraI"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="99dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:height="5dp"
        android:background="#6D84B4"
        android:backgroundTint="#6D84B4"
        android:text="@string/button_Entrar"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:text="@string/textview"
        android:textColor="#6D84B4"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview___2"
        android:textColor="#6D84B4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/nameandlast"
        android:text="@string/textview_nombre"
        android:textColor="#6D84B4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="189dp"
        android:layout_height="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_nombre"
        android:textColor="#6D84B4"
        android:textColorHint="#6D84B4"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/nameandlast"
        android:text="@string/input_apellidos"
        android:textColor="#6D84B4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="193dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_apellido"
        android:textColor="#6D84B4"
        android:textColorHint="#6D84B4"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="97dp"
        android:layout_height="66dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/baseline_alternate_email_24"
        android:text="@string/textview_correo1"
        android:textColor="#6D84B4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="181dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/input_correo"
        android:textColor="#6D84B4"
        android:textColorHint="#6D84B4"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="101dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/baseline_password_24"
        android:text="@string/textview_cont"
        android:textColor="#6D84B4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="179dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/input_cont"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/baseline_transgender_24"
        android:text="@string/textview_sex"
        android:textColor="#6D84B4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="82dp"
        android:layout_height="39dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/baseline_date_range_24"
        android:text="@string/textview_fecha"
        android:textColor="#6D84B4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="181dp"
        android:layout_height="34dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/input_fecha"
        android:textColor="#6D84B4"
        android:textColorHint="#6D84B4"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btn_registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#6D84B4"
        android:drawableLeft="@drawable/baseline_upload_24"
        android:text="@string/btn_registrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="116dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:text="@string/radibtn_olvide"
        android:textColor="#F6F1F1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textview_contra"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="99dp"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:text="@string/rdbtn_masc"
            android:textColor="#6D84B4"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/rdbtn_Femenino"
            android:textColor="#6D84B4"
            android:textSize="12sp" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:background="#6d84b4"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrate"
        tools:layout_editor_absoluteX="-1dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="357dp"
        android:layout_height="17dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:text="@string/txt_final"
        android:textColor="#6D84B4"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrate" />

</androidx.constraintlayout.widget.ConstraintLayout>